# grid_localisation

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: gridLocalisation.hpp  gridLocalisationNode.hpp  localisationServer.hpp  measurementModel.hpp  motionModel.hpp  utils.hpp
launch/: bag.launch  demo.launch  pr2.launch  turtlebot_demo.launch
maps/: cafe.pgm  cafe.yaml  cafe2.pgm  cafe2.yaml  floor2.pgm  floor2.yaml
rviz/: conf.rviz  turtlebot3_navigation.rviz
scripts/: grid_localisation_node.py  modify_bag.py
src/: gridLocalisation.cpp  gridLocalisationNode.cpp  grid_localisation_node.cpp  localisationServer.cpp  main.cpp  map_utils.cpp  measurementMdel.cpp  measurementModel.cpp  motionModel.cpp  utils.cpp
